RESOLVED FIXED231335
Fix unified source-related build failures in RemoteSourceBufferProxy.cpp
https://bugs.webkit.org/show_bug.cgi?id=231335
Summary Fix unified source-related build failures in RemoteSourceBufferProxy.cpp
Wenson Hsieh
Reported 2021-10-06 15:48:17 PDT
We directly use WebCore::AudioTrackPrivate and WebCore::VideoTrackPrivate in RemoteSourceBufferProxy.cpp, but we don't import their respective WebCore headers.
Attachments
Patch (1.69 KB, patch)
2021-10-06 15:52 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-10-06 15:52:31 PDT
EWS
Comment 2 2021-10-06 17:06:47 PDT
Committed r283681 (242619@main): <https://commits.webkit.org/242619@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440447 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-06 17:07:20 PDT
Note You need to log in before you can comment on or make changes to this bug.