Fix unified source-related build failures in RemoteSourceBufferProxy.cpp https://bugs.webkit.org/show_bug.cgi?id=231335

Reviewed by Tim Horton.

We directly use WebCore::AudioTrackPrivate and WebCore::VideoTrackPrivate in RemoteSourceBufferProxy.cpp, but we
don't import their respective WebCore headers; this causes the build to break when shifting around unified
source groupings. Resolve this via the usual means (by importing these headers).

* GPUProcess/media/RemoteSourceBufferProxy.cpp:


Canonical link: https://commits.webkit.org/242619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283681 268f45cc-cd09-0410-ab3c-d52691b4dbfc