Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.cpp
@@ -33,9 +33,11 @@
 #include "RemoteMediaPlayerProxy.h"
 #include "RemoteSourceBufferProxyMessages.h"
 #include "SourceBufferPrivateRemoteMessages.h"
+#include <WebCore/AudioTrackPrivate.h>
 #include <WebCore/ContentType.h>
 #include <WebCore/MediaDescription.h>
 #include <WebCore/PlatformTimeRanges.h>
+#include <WebCore/VideoTrackPrivate.h>
 
 namespace WebKit {
 
